1700-1750 分数段 质数